--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "moment": "^2.24.0",
     "multer": "^1.4.1",
     "nunjucks": "^3.2.0",
+    "nunjucks-date-filter": "^0.1.1",
     "pg": "^7.10.0",
     "sequelize": "^5.7.6"
   }
